--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,12 @@ pring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=12345
 server.port=8093
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
-spring.datasource.url=jdbc:h2:mem:memDb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;AUTO_RECONNECT=TRUE
+spring.datasource.url=jdbc:h2:./devdb
 
 
