--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,15 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:./devdb
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=egecoskun121@gmail.com
+spring.mail.password=ncdagjbwywotharq
+spring.mail.transport.protocol=smtp
+spring.mail.properties.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.smtp.starttls.enable=true
+
+
+mail.sender=egecoskun121@gmail.com
 
